# cafer_example

./: README.md
example_publisher_wave_cafer/: CMakeLists.txt  README.md  package.xml
example_publisher_wave_cafer/launch/: Supervisor_wave_1.launch
example_publisher_wave_cafer/launch/params/: supervisor_wave_1.yml  wave_1_metadata.yml
example_publisher_wave_cafer/src/: example_publisher_wave_cafer.cpp
example_sub_pub_db_cafer/: CMakeLists.txt  README.md  package.xml
example_sub_pub_db_cafer/include/data/: chatter_data.hpp
example_sub_pub_db_cafer/launch/: db_manager.launch
example_sub_pub_db_cafer/src/: db_manager_node.cpp
example_subscriber_wave_cafer/: CMakeLists.txt  CMakeLists.txt.user.01f753b  README.md  package.xml
example_subscriber_wave_cafer/launch/: subscriber_wave_supervisor.launch
example_subscriber_wave_cafer/src/: subscriber_wave_supervisor.cpp
